--- a/tienda/templates/plantilla.html
+++ b/tienda/templates/plantilla.html
@@ -18,10 +18,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% urls inicio %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="productos">Products</a>
+                <a class="nav-link" href="{% urls consultar %}">Products</a>
               </li>
             </ul>
           </div>
