into the produuctos.html: add a loop as 'for', what that meaning is, for each producto what is into productos array to bring as result the product´s name

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -4,4 +4,8 @@
 
     <h2 class="text-center">PRODUCTOS</h2>
 
+    {% for producto in productos%}
+        {{producto.nombre}}
+    {% endfor %}
+
 {%endblock%}
