adda tag from html to style to the table with its attributes. This into the productos.html

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -4,8 +4,16 @@
 
     <h2 class="text-center">PRODUCTOS</h2>
 
-    {% for producto in productos%}
+    <table class="table table-info">
+        <tr>
+            <th>Nombre</th>
+            <th>Precio</th>
+            <th>Descripción</th>
+            <th></th>
+        </tr>
+        {% for producto in productos%}
         {{producto.nombre}}
     {% endfor %}
+    </table>
 
 {%endblock%}
