--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -4,7 +4,7 @@
 
     <h2 class="text-center">PRODUCTOS</h2>
 
-    <table class="table table-info">
+    <table class="table table-info w-75 mx-auto">
         <tr class= "table-dark">
             <th>Nombre</th>
             <th>Precio</th>
