--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -6,6 +6,7 @@
 
 
     <form class="w-50 shadow mx-auto p-4 m-3" method="post">
+        {%csrf token %}
         Nombre: <input type="text" name="nombre" class="form-control my-2"/>
 
         Precio: <input type="number" name="precio" class="form-control" my-2/>
