add a action attribute for the form and put into the path where will be sent to. In productos.html

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -5,7 +5,7 @@
     <h2 class="text-center">PRODUCTOS</h2>
 
 
-    <form class="w-50 shadow mx-auto p-4 m-3" method="post">
+    <form class="w-50 shadow mx-auto p-4 m-3" method="post" action="productos/guardar">
         {%csrf token %}
         Nombre: <input type="text" name="nombre" class="form-control my-2"/>
 
