change or fix the sintaxis about the token 'cause was missing a underscore between. In productos.html

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -6,10 +6,10 @@
 
 
     <form class="w-50 shadow mx-auto p-4 m-3" method="post" action="productos/guardar">
-        {%csrf token %}
-        Nombre: <input type="text" name="nombre" class="form-control my-2"/>
+        {%csrf_token %}
+        Nombre: <input type="text" name="nombre" class="form-control my-2" required/>
 
-        Precio: <input type="number" name="precio" class="form-control" my-2/>
+        Precio: <input type="number" name="precio" class="form-control my-2" required />
 
         Descripción: 
         <textarea class="form-control my-2" name="description">
