to send a message at the user: go to the productos.html and typing {%if message%} and into the that 'if' then typing a 'for' to send message and add a div tag about html [2nd part:right]

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -3,7 +3,9 @@
 {% block content %}
 
     {% if message %}
-
+        {%for message in messages%}
+            <div class="alert alert-success">{{message}}</div>
+        {%endfor%}
     {% endif %}
 
     <h2 class="text-center">PRODUCTOS</h2>
