--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    {% if message %}
+    {% if messages %}
         {%for message in messages%}
             <div class="alert alert-success">{{message}}</div>
         {%endfor%}
