Create a form for the user to click and be sent to delete: Enter in .html products and enter that empty <td> and typear within the <form> tag and put it in action{%url 'delete'%} attribute

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -38,7 +38,11 @@
                   <td>{{producto.nombre}}</td>
                   <td>{{producto.precio}}</td> 
                   <td>{{producto.description}}</td> 
-                  <td></td>    
+                  <td>
+                        <form action="{% url 'eliminar'%}">
+
+                        </form>
+                  </td>    
             </tr>
     {% endfor %}
     </table>
