into the productos.html to enter into the form tag, 'producto.id', the method and token, after add eliminar button

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -39,7 +39,9 @@
                   <td>{{producto.precio}}</td> 
                   <td>{{producto.description}}</td> 
                   <td>
-                        <form action="{% url 'eliminar'%}">
+                        <form action="{% url 'eliminar' producto.id %}" method="post">
+                            {%csrf_token%}
+                            <button class= "btn btn-danger">Eliminar</button>
 
                         </form>
                   </td>    
