--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -40,9 +40,10 @@
                   <td>{{producto.description}}</td> 
                   <td>
                         <form action="{% url 'eliminar' producto.id %}" method="post">
-                            {%csrf_token%}
-                            <button class= "btn btn-danger">Eliminar</button>
-
+                            {% csrf_token %}
+                            <button class= "btn btn-danger">
+                                🗑
+                            </button>
                         </form>
                   </td>    
             </tr>
