to ask to the user with a message to confirm the deleted product, if the user to want to delete it: into the product.html

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -41,7 +41,7 @@
                   <td>
                         <form action="{% url 'eliminar' producto.id %}" method="post">
                             {% csrf_token %}
-                            <button class= "btn btn-danger">
+                            <button class= "btn btn-danger" onclick="return confirm('Deseas eliminar este producto')">
                                 🗑
                             </button>
                         </form>
