into the productos.html: to use the empthy <th> typing 'coslpan' to measure 2 columns and copy the <td> w/ form() tag to make the update operation

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -31,7 +31,7 @@
             <th>Nombre</th>
             <th>Precio</th>
             <th>Descripción</th>
-            <th></th>
+            <th colspan="2"></th>
         </tr>
         {% for producto in productos%}
             <tr>
@@ -45,7 +45,15 @@
                                 🗑
                             </button>
                         </form>
-                  </td>    
+                  </td>
+                  <td>
+                    <form action="{% url 'eliminar' producto.id %}" method="post">
+                        {% csrf_token %}
+                        <button class= "btn btn-danger" onclick="return confirm('Deseas eliminar este producto')">
+                            🗑
+                        </button>
+                    </form>
+              </td>        
             </tr>
     {% endfor %}
     </table>
