add changes to fix path

--- a/tienda/templates/productos.html
+++ b/tienda/templates/productos.html
@@ -49,8 +49,8 @@
                   <td>
                     <form action="{% url 'detalle' producto.id %}" method="post">
                         {% csrf_token %}
-                        <button class= "btn btn-edit">
-                            <i class="fa-solid fa-pencil"></i>
+                        <button class= "btn btn-warning">
+                            ✏️
                         </button>
                         
                     </form>
