--- a/tienda/templates/productoEditar.html
+++ b/tienda/templates/productoEditar.html
@@ -7,6 +7,8 @@
 
     <form class="w-50 shadow mx-auto p-4 m-3" method="post" action="{% url 'editar' %}">
         {%csrf_token %}
+
+        <input type="hidden" name="id" value="{{producto.id}}"/>
         Nombre: <input type="text" name="nombre" class="form-control my-2" required value={{producto.nombre}}/>
 
         Precio: <input type="number" name="precio" class="form-control my-2" required value={{producto.precio}/>
