add changes into the productoEditar.html: name of the input and change class to the warning style

--- a/tienda/templates/productoEditar.html
+++ b/tienda/templates/productoEditar.html
@@ -18,7 +18,7 @@
             {{producto.description}}
         </textarea>
 
-        <input type="submit" value="Guardar" class="btn btn-primary"/>
+        <input type="submit" value="Actualizar" class="btn btn-warning"/>
 
     </form>
 
